@@ -1,3 +1,8 @@
+Sat Jul  7 16:32:24 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (determine_lang_table): Fix silly bracketing typo that
+	  caused none of the lang_table entries to match.
+
 Thu Jul  5 15:48:42 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.3.19.
